--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
         <meta charset="utf-8">
 
         <title> About Us|Campus Mover </title>
-        <link rel="stylesheet" href="midstyle.css">
+        <link rel="stylesheet" href="style.css">
          <style type = "text/css">
             p,h1, h2{
                 margin-left: 20px;
