--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <header >
             <div class = 'logo' >
                 <a href="homepage.html"><picture>
-                <source media="(min-width:700px)" srcset="ALM.png">
+                <source media="(min-width:700px)" srcset="logo.png">
                 <img src="ALM.png" alt="logo" height="200" style="width:auto;" class = "logo">
                 </picture></a>
             </div>
