--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class = 'logo' >
                 <a href="homepage.html"><picture>
                 <source media="(min-width:700px)" srcset="logo.png">
-                <img src="ALM.png" alt="logo" height="200" style="width:auto;" class = "logo">
+                <img src="logo.png" alt="logo" height="200" style="width:auto;" class = "logo">
                 </picture></a>
             </div>
             <div class = "navbar">
