--- a/join.html
+++ b/join.html
@@ -53,7 +53,7 @@
             <div class = "navbar">
                 <ul> 
                     <li><a href="homepage.html">Homepage</a></li>
-                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="index.html">About Us</a></li>
                     <li><a href="service.html">services</a></li>
                     <li> <a href="review.html">Review</a></li>
                     <li> <a href="team.html">Our Team</a></li>
@@ -91,8 +91,8 @@
                 
                 <center>
                     <picture>
-                    <source media="(min-width:700px)" srcset="image/join_us.JPG">
-                    <img src="image/join_us.JPG" alt="image" height="200" >
+                    <source media="(min-width:700px)" srcset="join_us.JPG">
+                    <img src="join_us.JPG" alt="image" height="200" >
                 
                     </picture>
                 </center>
