--- a/contact.html
+++ b/contact.html
@@ -17,14 +17,14 @@
         <header >
             <div class = 'logo' >
                 <a href="homepage.html"><picture>
-                <source media="(min-width:700px)" srcset="image/logo.png">
-                <img src="image/logo.png" alt="logo" height="200" style="width:auto;" class = "logo">     
+                <source media="(min-width:700px)" srcset="logo.png">
+                <img src="logo.png" alt="logo" height="200" style="width:auto;" class = "logo">     
                 </picture></a>
             </div>
             <div class = "navbar">
                 <ul> 
                     <li><a href="homepage.html">Homepage</a></li>
-                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="index.html">About Us</a></li>
                     <li><a href="service.html">services</a></li>
                     <li> <a href="review.html">Review</a></li>
                     <li> <a href="team.html">Our Team</a></li>
