--- a/team.html
+++ b/team.html
@@ -15,14 +15,14 @@
             <div class = 'logo' >
                 <a href="homepage.html"><picture>
                 <source media="(min-width:700px)" srcset="logo.png">
-                <img src="ALM.png" alt="logo" height="200" style="width:auto;" class = "logo">
+                <img src="logo.png" alt="logo" height="200" style="width:auto;" class = "logo">
                 </picture></a>
             </div>
             <div class = "navbar">
                 <ul>
                     <li><a href="homepage.html">Homepage</a></li>
                     <li><a href="about.html">About Us</a></li>
-                    <li><a href="service.html">services</a></li>
+                    <li><a href="service.html">Services</a></li>
                     <li> <a href="review.html">Review</a></li>
                     <li> <a href="team.html">Our Team</a></li>
                     <li> <a href="contact.html">Contact</a></li>
