--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
             </div>
             <div class = "navbar">
                 <ul>
-                    <li><a href="homepage.html">Homepage</a></li>
+                    <li><a href="index.html">Homepage</a></li>
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="service.html">services</a></li>
                     <li> <a href="review.html">Review</a></li>
