--- a/join.html
+++ b/join.html
@@ -43,7 +43,7 @@
     <body>
         <header >
             <div class = 'logo' >
-                <a href="homepage.html"><picture>
+                <a href="index.html"><picture>
                 <source media="(min-width:700px)" srcset="logo.png">
                 <img src="logo.png" alt="logo" height="200" style="width:auto;" class = "logo">
             
@@ -52,8 +52,8 @@
             </div>
             <div class = "navbar">
                 <ul> 
-                    <li><a href="homepage.html">Homepage</a></li>
-                    <li><a href="index.html">About Us</a></li>
+                    <li><a href="index.html">Homepage</a></li>
+                    <li><a href="about.html">About Us</a></li>
                     <li><a href="service.html">services</a></li>
                     <li> <a href="review.html">Review</a></li>
                     <li> <a href="team.html">Our Team</a></li>
@@ -105,7 +105,7 @@
 
 
         <footer>
-            <button type="button" style="text-align: right; width: 10%; margin-right: 3%; "><a href="homepage.html">Homepage &#8618 </a></button>
+            <button type="button" style="text-align: right; width: 10%; margin-right: 3%; "><a href="index.html">Homepage &#8618 </a></button>
         </footer>
 
     </body>
