--- a/service.html
+++ b/service.html
@@ -113,7 +113,7 @@
                 <center>
                     <picture>
                     <source media="(min-width:700px)" srcset="image/review_1.JPG">
-                    <img src="image/review_1.JPG" alt="image" height="200" >
+                    <img src="review_1.JPG" alt="image" height="200" >
                 
                     </picture>
                 </center>
