--- a/contact.html
+++ b/contact.html
@@ -23,8 +23,8 @@
             </div>
             <div class = "navbar">
                 <ul> 
-                    <li><a href="homepage.html">Homepage</a></li>
-                    <li><a href="index.html">About Us</a></li>
+                    <li><a href="index.html">Homepage</a></li>
+                    <li><a href="about.html">About Us</a></li>
                     <li><a href="service.html">services</a></li>
                     <li> <a href="review.html">Review</a></li>
                     <li> <a href="team.html">Our Team</a></li>
@@ -56,11 +56,7 @@
                 
                     <form>
                         <label for="email">Subscribe Form:</label><br/>
-
                         <input type="text" id="email" name="email" value="Email Address" required><br/>
-
-                        
-
                         <input type="submit" class= 'submit' value="Submit"><br>
                     </form> 
                 </h2></div>
@@ -70,7 +66,7 @@
         </div>
 
         <footer>
-            <button type="button" style="text-align: right; width: 10%; margin-right: 3%; "><a href="homepage.html">Homepage &#8618 </a></button>
+            <button type="button" style="text-align: right; width: 10%; margin-right: 3%; "><a href="index.html">Homepage &#8618 </a></button>
         </footer>
 
     </body>
