--- a/team.html
+++ b/team.html
@@ -11,26 +11,27 @@
         </style>
     </head>
     <body>
-        <header >
-            <div class = 'logo' >
-                <a href="homepage.html"><picture>
-                <source media="(min-width:700px)" srcset="logo.png">
-                <img src="logo.png" alt="logo" height="200" style="width:auto;" class = "logo">
+       <header >
+            <div class = "logo" style="padding:20px">
+                <a href="index.html"><picture>
+                <source media="(min-width:600px)" srcset="pics/newlogotr.png">
+                <img src="pics/newlogotr.png" alt="logo" height="150" style="width:auto;" class = "logo">     
                 </picture></a>
             </div>
             <div class = "navbar">
-                <ul>
-                    <li><a href="homepage.html">Homepage</a></li>
+                <ul> 
+                    <li><a href="index.html">Homepage</a></li>
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="service.html">Services</a></li>
-                    <li> <a href="review.html">Review</a></li>
+                    <li> <a href="review.html">Reviews</a></li>
                     <li> <a href="team.html">Our Team</a></li>
-                    <li> <a href="contact.html">Contact</a></li>
-                    <li><a style="color:#bf4040;" href="join.html">Join US</a></li>
+                    <li> <a href="contact.html">Contact Us</a></li>
+                    <li><a style="color:#a07c47;" href="join.html">Join US</a></li>
 
                 </ul>
             </div>
-        </header>
+	</header>
+
 
         <div class = 'float-container info'>
         <iframe src="https://partycity5.scene7.com/is/image/PartyCity/P628205?wid=400" width="400" height="400" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
