--- a/service.html
+++ b/service.html
@@ -54,24 +54,22 @@
     </head>
 
     <body>
-        <header >
-            <div class = 'logo' >
-                <a href="homepage.html"><picture>
-                <source media="(min-width:700px)" srcset="logo.png">
-                <img src="logo.png" alt="logo" height="200" style="width:auto;" class = "logo">
-            
+       <header >
+            <div class = "logo" style="padding:20px">
+                <a href="index.html"><picture>
+                <source media="(min-width:600px)" srcset="pics/newlogotr.png">
+                <img src="pics/newlogotr.png" alt="logo" height="150" style="width:auto;" class = "logo">     
                 </picture></a>
-
             </div>
             <div class = "navbar">
                 <ul> 
-                    <li><a href="homepage.html">Homepage</a></li>
+                    <li><a href="index.html">Homepage</a></li>
                     <li><a href="about.html">About Us</a></li>
-                    <li><a href="service.html">services</a></li>
-                    <li> <a href="review.html">Review</a></li>
+                    <li><a href="service.html">Services</a></li>
+                    <li> <a href="review.html">Reviews</a></li>
                     <li> <a href="team.html">Our Team</a></li>
-                    <li> <a href="contact.html">Contact</a></li>
-                    <li><a style="color:#ab5255;" href="join.html">Join US</a></li>
+                    <li> <a href="contact.html">Contact Us</a></li>
+                    <li><a style="color:#a07c47;" href="join.html">Join US</a></li>
 
                 </ul>
             </div>
@@ -125,9 +123,17 @@
 
 
 
-        <footer>
-            <button type="button" style="text-align: right; width: 10%; margin-right: 3%; "><a href="homepage.html">Homepage &#8618 </a></button>
-        </footer>
+        <div class="footer">
+	  	<ul>
+			<li><a class="active" href="index.html">Home</a></li>
+			<li><a href="contact.html">Contact Us</a></li>
+			<li><a href="service.html">Services</a></li>
+			<li><a href="about.html">About Us</a></li>
+			<li><a href="review.html">Reviews</a></li>
+			<li><a href="team.html" target="_blank">Our Team</a></li>
+		</ul>
+	</div>
+
 
     </body>
 </html>
