--- a/team.html
+++ b/team.html
@@ -106,9 +106,17 @@
 
 
 
-    <footer>
-        <a href="homepage.html">Homepage &#8618 </a>
-    </footer>
+   <div class="footer">
+	  	<ul>
+			<li><a class="active" href="index.html">Home</a></li>
+			<li><a href="contact.html">Contact Us</a></li>
+			<li><a href="service.html">Services</a></li>
+			<li><a href="about.html">About Us</a></li>
+			<li><a href="review.html">Reviews</a></li>
+			<li><a href="team.html" target="_blank">Our Team</a></li>
+		</ul>
+	</div>
+
 
 </body>
 </html>
