--- a/service.html
+++ b/service.html
@@ -57,8 +57,8 @@
        <header >
             <div class = "logo" style="padding:20px">
                 <a href="index.html"><picture>
-                <source media="(min-width:600px)" srcset="pics/newlogotr.png">
-                <img src="pics/newlogotr.png" alt="logo" height="150" style="width:auto;" class = "logo">     
+                <source media="(min-width:600px)" srcset="newlogotr.png">
+                <img src="newlogotr.png" alt="logo" height="150" style="width:auto;" class = "logo">     
                 </picture></a>
             </div>
             <div class = "navbar">
@@ -110,7 +110,7 @@
                 
                 <center>
                     <picture>
-                    <source media="(min-width:700px)" srcset="image/review_1.JPG">
+                    <source media="(min-width:700px)" srcset="review_1.JPG">
                     <img src="review_1.JPG" alt="image" height="200" >
                 
                     </picture>
