--- a/team.html
+++ b/team.html
@@ -3,7 +3,7 @@
         <meta charset="utf-8">
 
         <title> Our Team|Campus Mover </title>
-        <link rel="stylesheet" href="midstyle.css">
+        <link rel="stylesheet" href="style.css">
          <style type = "text/css">
             p,h1, h2{
                 margin-left: 20px;
