--- a/contact.html
+++ b/contact.html
@@ -17,8 +17,8 @@
         <header >
             <div class = "logo" style="padding:20px">
                 <a href="index.html"><picture>
-                <source media="(min-width:600px)" srcset="newlogobig.png">
-                <img src="newlogobig.png" alt="logo" height="150" style="width:auto;" class = "logo">     
+                <source media="(min-width:600px)" srcset="newlogotr.png">
+                <img src="newlogotr.png" alt="logo" height="150" style="width:auto;" class = "logo">     
                 </picture></a>
             </div>
             <div class = "navbar">
@@ -48,8 +48,9 @@
             </div>
             <div class = 'float-child'>
                 <h1 style="color:#df9f9f;" >CONTACT CAMPUS MOVER</h1>
-                <div><p> We're Here to Help You!</p>
+                <div>
                 <h2>
+		<p> We're Here to Help You!</p>
                 Email: <a href="mailto:CampusMover@gmail.com">CampusMover@gmail.com</a><br><br>
                 Location: 18985 Seabiscuit Run, Yorba Linda, CA 92886<br><br>
                 Tel: <a href = 'tel: 503-893-0186'>(503) 893-0186</a><br> 
