--- a/review.html
+++ b/review.html
@@ -115,8 +115,8 @@
         <header >
             <div class = "logo" style="padding:20px">
                 <a href="index.html"><picture>
-                <source media="(min-width:600px)" srcset="pics/newlogotr.png">
-                <img src="pics/newlogotr.png" alt="logo" height="150" style="width:auto;" class = "logo">     
+                <source media="(min-width:600px)" srcset="newlogobig.png">
+                <img src="newlogobig.png" alt="logo" height="150" style="width:auto;" class = "logo">     
                 </picture></a>
             </div>
             <div class = "navbar">
