--- a/service.html
+++ b/service.html
@@ -83,7 +83,7 @@
                     around that date and cost estimates!
                 </p>
                 <h1 style="color:#df9f9f;"> Schedule Services </h1>
-                <form id = "services" action="#" method= 'post'>
+                <form id = "services" method= 'post'>
 
                         <label for="fname">First name:</label><br/>
                         <input type="text" id="fname" name="fname" required style="width: 80%;"><br/>
