--- a/contact.html
+++ b/contact.html
@@ -17,8 +17,8 @@
         <header >
             <div class = "logo" style="padding:20px">
                 <a href="index.html"><picture>
-                <source media="(min-width:600px)" srcset="newlogotr.png">
-                <img src="newlogotr.png" alt="logo" height="150" style="width:auto;" class = "logo">     
+                <source media="(min-width:600px)" srcset="newlogobig.png">
+                <img src="newlogobig.png" alt="logo" height="150" style="width:auto;" class = "logo">     
                 </picture></a>
             </div>
             <div class = "navbar">
@@ -33,10 +33,7 @@
 
                 </ul>
             </div>
-	    </header>
-
-        
-
+	</header>
 
         <div class = 'float-container info'>
             <div class = 'float-child'>
